crates/opi-tui/tests/snapshots/select_list_snapshots__select_list_basic_120x40.snap
---
source: crates/opi-tui/tests/select_list_snapshots.rs
expression: "render(widget, 120, 40)"
---
┌ Models ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Type to filter...                                                                                                     │
│> Claude Sonnet 4.5                                                                                          Anthropic│
│Claude Opus 4                                                                                                Anthropic│
│GPT-4o                                                                                                          OpenAI│
│GPT-4o Mini                                                                                                     OpenAI│
│Gemini 2.5 Flash                                                                                                Google│
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
