crates/opi-tui/tests/snapshots/select_list_snapshots__select_list_basic_80x24.snap
---
source: crates/opi-tui/tests/select_list_snapshots.rs
assertion_line: 44
expression: "render(widget, 80, 24)"
---
┌ Models ──────────────────────────────────────────────────────────────────────┐
│Type to filter...                                                             │
│> Claude Sonnet 4.5                                                   Anthropi│
│Claude Opus 4                                                       Anthropic │
│GPT-4o                                                                 OpenAI │
│GPT-4o Mini                                                            OpenAI │
│Gemini 2.5 Flash                                                       Google │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
