crates/opi-tui/tests/snapshots/select_list_snapshots__select_list_empty_results_80x24.snap
---
source: crates/opi-tui/tests/select_list_snapshots.rs
assertion_line: 60
expression: "render(widget, 80, 24)"
---
┌ Models ──────────────────────────────────────────────────────────────────────┐
│> zzzzz                                                                       │
│No matches                                                                    │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
