crates/opi-tui/tests/snapshots/select_list_snapshots__select_list_with_filter_120x40.snap
---
source: crates/opi-tui/tests/select_list_snapshots.rs
assertion_line: 94
expression: "render(widget, 120, 40)"
---
┌ Models ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│> gpt                                                                                                                 │
│> GPT-4o                                                                                                         OpenA│
│GPT-4o Mini                                                                                                    OpenAI │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
