crates/opi-tui/tests/snapshots/select_list_snapshots__select_list_with_filter_80x24.snap
---
source: crates/opi-tui/tests/select_list_snapshots.rs
expression: "render(widget, 80, 24)"
---
┌ Models ──────────────────────────────────────────────────────────────────────┐
│> gpt                                                                         │
│> GPT-4o                                                                OpenAI│
│GPT-4o Mini                                                             OpenAI│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
